# brozena-old.github.io

./: .jekyll-metadata  CNAME  Gemfile  _config.yml  about.md  archives.md  gallery.md  index.md  notes.md  now.md  reading.md  summer.md  tabla.md
_data/: navigation.yml
_drafts/: 2018-11-23-falls.md  amor-fati.md  forgiveness.md
_includes/: about.md  cv.html  goodreads.css  goodreads.html  goodreads0.html  goodreads1.html  image-gallery.html
_layouts/: archive.html  archive_tinyletter.html  gallery.html  home.bak.html  home.html  home.md  nobody-falls-halfway.html  page.html
_nobody-falls-halfway/: 1.md  2.md  3.md  4.md
_posts/: 2013-07-12-open-letter.md  2013-07-30-seeing-and-suffering.md  2013-08-26-fear-of-heights.md  2013-09-25-actions-speak.md  2013-10-23-cleaning.md  2016-05-12-healing-vs-fixing.md  2016-07-25-harvesting-discipline.md  2018-11-21-sanity-check.md  2018-11-23-falls.md  2019-02-20-nobody-falls-halfway.md  2019-08-07-preparedness.md  2020-08-22-risk.md  2021-07-10-some-years-happen-in-a-day.md
_sass/: _goodreads.scss  goodreads.scss  whiteglass.scss
_sass/whiteglass/: _base.scss  _layout.scss
assets/: 2018.html  2019.html  2020.08.12-getting-to-actigraphy_brozena.html  pyproject.toml  resume.html  summer.md  tmp
