[tool.poetry]
name = "oysterpail"
version = "0.1.0"
description = ""
authors = ["Saeed Abdullah <me@saeedabdullah.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^19.3-alpha.0", allow-prereleases = true}
mail-parser = "^3.9"
talon = "^1.4"
spacy = "^2.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}
pandas = "^0.25.3"
sphinx-autodoc-typehints = "^1.10.3"
[tool.poetry.dev-dependencies]
pytest = "^5.2.0"
sphinx = "^2.1"
flake8 = "^3.7"
mypy = "^0.730.0"
pre-commit = "^1.18"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
